src/objects/Active_Users_By_Application_Version__c.object
<CustomObject>
    <fields>
        <fullName>Application_Download_Stats__c</fullName>
        <label>Application Download Stats</label>
        <referenceTo>Application_Download_Stats__c</referenceTo>
        <relationshipLabel>Active Users By Application Versions</relationshipLabel>
        <relationshipName>Active_Users_By_Application_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_downloads__c</fullName>
        <label>Number of downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <externalId>true</externalId>
        <label>UniqueID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Active Users By Application Version</label>
    <nameField>
        <label>Active Users By Application Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Active Users By Application Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>